
Version 5.22.0

New: Renamed the "set logfile <path|syslog>" statement to "set log <path|syslog>".
The "logfile" form is deprecated, but kept for backward compatibility.

Fixed: Issue #568: fix cross-compilation

Fixed: Issue #569: fix configure --without-zlib

Fixed: Issue #570: if the connection test requires STARTTLS, the certificate valid
days test was broken.


Version 5.21.0

New: The filesystem read/write statistics is now displayed in Monit GUI and CLI. Tests:
    check filesystem myfs with path /dev/sda1
        if read rate > 1 MB/s for 5 cycles then alert
        if read rate > 500 operations/s for 5 cycles then alert
        if write rate > 1 MB/s for 5 cycles then alert
        if write rate > 500 operations/s for 5 cycles then alert
        if service time > 10 milliseconds for 3 times within 5 cycles then alert

New: The per-process read/write statistics is now displayed in Monit GUI and CLI. The available
statistics depends on platform.
Example for Linux and MacOS:
    check process myprocess matching "myprocess"
        if disk read > 500 kb/s for 10 cycles then alert
        if disk write > 500 kb/s for 10 cycles then alert
Example for AIX, DragonFlyBSD, FreeBSD, NetBSD, OpenBSD and Solaris:
    check process myprocess matching "myprocess"
        if disk read > 100 operations/s for 10 cycles then alert
        if disk write > 100 operations/s for 10 cycles then alert

New: It is now possible to use NFS/CIFS/SSHFS/etc. connection strings for filesystem path. Examples:
        check filesystem mynfs with path "192.168.1.123:/home/myuser"
        check filesystem mycifs with path "//192.168.1.123/documents"
        check filesystem mysshfs with path "myuser@192.168.1.123:/home/myuser"

New: Report filesystem type in the status output

New: Linux and Solaris: cache per-filesystem mount table status and refresh only if changed
(some filesystem mounted/unmounted).
